<resources>
    <string name="app_name">Jobche</string>
    <string name="add_task">Добавяни обявата</string>
    <string name="profile">Профил</string>
    <string name="messages">Съобщения</string>
    <string name="applied">Кандидатствания</string>
    <string name="my_tasks">Моите Обяви</string>
    <string name="saved">Saved</string>
    <string name="email">Имейл</string>
    <string name="new_user">Нов потребител?</string>
    <string name="sign_up">Регистрация</string>
    <string name="password">Парола</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="log_out">Изход</string>
    <string name="home">Обяви</string>
    <string name="title">Заглавие</string>
    <string name="leva">лв</string>
    <string name="price">Заплащане(лв.)</string>
    <string name="priceTag">Заплащане</string>
    <string name="start">Начало</string>
    <string name="no_ratings">Без оценка</string>
    <string name="accepted">Приети</string>
    <string name="firstname">Име</string>
    <string name="lastname">Фамилия</string>
    <string name="country">Държава</string>
    <string name="city">Град</string>
    <string name="payment">Заплащане:</string>
    <string name="workers">Брой Работници</string>
    <string name="time">Час</string>
    <string name="description">Описание</string>
    <string name="date">Дата:</string>
    <string name="date_input">Дата</string>
    <string name="search_tasks">Търсене</string>
    <string name="to_date">Крайна дата</string>
    <string name="from_date">Начална дата</string>
    <string name="min_workers">Минимален брой работници</string>
    <string name="min_payment">Минимално заплащане</string>
    <string name="log_in">Вход</string>
    <string name="what_is_your_name">Как се казваш?</string>
    <string name="next">Продължи</string>
    <string name="confirm_password">Потвърди Парола</string>
    <string name="date_of_birth">Дата на раждане</string>
    <string name="task_history">История</string>
    <string name="when_is_your_birthday">Кога си роден?</string>
    <string name="phone">Телефон</string>
    <string name="contacts">За връзка с другите.</string>
    <string name="start_at">Начало:</string>
    <string name="error_empty">Моля попълнете полето.</string>
    <string name="apply">Кандидатствам</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="write_strong_password">Напиши сигурна парола!</string>


</resources>
