<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_add_task"
                android:icon="@drawable/ic_add_black_24dp"
                android:title="@string/add_task" />
        <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/profile" />
        <item
                android:id="@+id/nav_messages"
                android:icon="@drawable/ic_email_black_24dp"
                android:title="@string/messages" />
        <item
                android:id="@+id/nav_my_taskt"
                android:icon="@drawable/ic_work_black_24dp"
                android:title="@string/my_tasks" />
        <item
                android:id="@+id/nav_applied_for"
                android:icon="@drawable/ic_send_black_24dp"
                android:title="@string/applied" />
        <item
                android:id="@+id/nav_saved"
                android:icon="@drawable/ic_loved_black_24dp"
                android:title="@string/saved"/>
    </group>
    <group
            android:checkableBehavior="none">

        <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_log_out_black_24dp"
                android:title="@string/log_out" >
        </item>
    </group>
</menu>