<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="filter"
                type="com.example.user.jobche.Filter"/>
        <variable
                name="viewModel"
                type="com.example.user.jobche.FilterViewModel"/>
    </data>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".UI.Fragments.AddTaskFragment"
            android:orientation="vertical"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">


        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/title"
                android:inputType="textCapSentences"
                android:text="@={filter.title}"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/city"
                android:inputType="textCapSentences"
                android:text="@={filter.city}"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/min_payment"
                android:inputType="number"
                android:text='@={filter.PStart}'/>


        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/min_workers"
                android:inputType="number"
                android:text='@={filter.numWStart}'/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Mежду дати:"
                android:textSize="17sp"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="2">

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:hint="@string/from_date"
                    android:text="@{viewModel.formattedDateStart}"
                    android:onClick="@{() -> viewModel.onBeginDate()}"/>

            <View
                    android:layout_width="10dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@android:color/black"
                    android:textSize="20sp"/>

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:hint="@string/to_date"
                    android:text="@{viewModel.formattedDateEnd}"
                    android:onClick="@{() -> viewModel.onEndDate()}"/>

        </LinearLayout>

        <Button
                android:id="@+id/filter_task_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_tasks"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:textAllCaps="false"

                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:onClick="@{() -> viewModel.onClickSearch()}"/>

    </LinearLayout>
</layout>