<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="task"
                type="com.example.user.jobche.Task"/>

        <variable
                name="viewModel"
                type="com.example.user.jobche.AddTaskViewModel"/>
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".UI.Fragments.AddTaskFragment">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="30"
                    app:error='@{task.observedTitle.isEmpty() &amp;&amp; viewModel.onClicked ? viewModel.errorMsg : ""}'>

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:hint="@string/title"
                        android:maxLength="30"
                        android:inputType="textCapSentences"
                        android:text='@={task.observedTitle}'/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:error='@{task.observedCity.isEmpty() &amp;&amp; viewModel.onClicked ? viewModel.errorMsg : ""}'>


                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:hint="@string/city"
                        android:maxLength="20"
                        android:inputType="textCapSentences"
                        android:text="@={task.observedCity}"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="3"
                    app:error='@{task.observedPayment.isEmpty() &amp;&amp; viewModel.onClicked ? viewModel.errorMsg : ""}'>


                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:hint="@string/payment"
                        android:inputType="number"
                        android:text='@={task.observedPayment}'/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="1"
                    app:error='@{task.observedNumberOfWorkers.isEmpty() &amp;&amp; viewModel.onClicked ? viewModel.errorMsg : ""}'>


                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:hint="@string/workers"
                        android:inputType="number"
                        android:text='@={task.observedNumberOfWorkers}'/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:error='@{viewModel.date.isEmpty() &amp;&amp; viewModel.onClicked ? viewModel.errorMsg : ""}'>

                    <android.support.design.widget.TextInputEditText
                            android:id="@+id/date_edttxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:hint="@string/date_input"
                            android:text="@={viewModel.date}"
                            android:onClick="@{() -> viewModel.onClickDate()}"
                    />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:error='@{viewModel.time.isEmpty() &amp;&amp; viewModel.onClicked ? viewModel.errorMsg : ""}'>


                    <android.support.design.widget.TextInputEditText
                            android:id="@+id/time_edttxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"
                            android:hint="@string/time"
                            android:text="@={viewModel.time}"
                            android:onClick="@{() -> viewModel.onClickTime()}"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="500"
                    android:layout_marginTop="30dp"
                    app:error='@{task.observedDescription.isEmpty() &amp;&amp; viewModel.onClicked ? viewModel.errorMsg : ""}'>

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description"
                        android:padding="10dp"
                        android:inputType="textMultiLine|textCapSentences"
                        android:text="@={task.observedDescription}"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                    android:id="@+id/add_task_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_task"
                    android:layout_gravity="center"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@color/colorPrimary"
                    android:textColor="@android:color/white"
                    android:textAllCaps="false"
                    android:onClick="@{() -> viewModel.onClickAddTask()}"/>

        </LinearLayout>
    </ScrollView>
</layout>