<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="viewModel"
                type="com.example.user.jobche.SignupPasswordViewModel"/>
    </data>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".UI.SignupPasswordActivity"
            android:orientation="vertical"
            android:background="@color/colorPrimary">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Write strong password!"
                    android:textSize="30sp"
                    android:layout_marginTop="100dp"
                    android:textColor="@android:color/white"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:layout_marginTop="50dp"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

            <EditText
                    android:id="@+id/signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:maxLines="1"
                    android:background="@android:color/transparent"
                    android:inputType="textPassword"
                    android:layout_marginTop="10dp"
                    android:text="@={viewModel.password}"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/white"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_password"
                    android:layout_marginTop="30dp"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"/>


            <EditText
                    android:id="@+id/signup_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:maxLines="1"
                    android:background="@android:color/transparent"
                    android:inputType="textPassword"
                    android:layout_marginTop="10dp"
                    android:text="@={viewModel.confPassword}"/>
            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/white"/>

            <Button
                    android:id="@+id/next_pass_btn"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/next"
                    android:textColor="@android:color/white"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:elevation="2dp"
                    android:background="@drawable/button_login"
                    android:layout_marginTop="40dp"
                    android:onClick="@{() -> viewModel.onClick()}"/>
        </LinearLayout>
    </LinearLayout>
</layout>